fix(header-nav): sub-menu overflow

--- a/src/components/global/header/headerLink.scss
+++ b/src/components/global/header/headerLink.scss
@@ -86,8 +86,12 @@
   }
 
   &__content {
-    display: flex;
+    display: none;
     background: var(--kd-color-background-accent-subtle);
+
+    &.slotted {
+      display: flex;
+    }
 
     @media (min-width: 42rem) {
       transform: translateX(-20px);
@@ -109,7 +113,7 @@ kyn-text-input {
 
     &.open {
       .menu__content {
-        transform: translateX(0);
+        transform: scaleX(1);
         z-index: 2;
       }
     }
@@ -122,6 +126,7 @@ kyn-text-input {
   .menu__content {
     top: var(--kd-header-height) !important;
     left: 0 !important;
-    transform: translateX(100%);
+    transform: scaleX(0);
+    transform-origin: right;
   }
 }
