--- a/src/components/global/header/headerNav.scss
+++ b/src/components/global/header/headerNav.scss
@@ -14,7 +14,10 @@
 }
 
 .menu__content {
-  top: calc(100% + 10px);
   background: var(--kd-color-background-ui-soft);
   padding: 8px;
+
+  @media (min-width: 42rem) {
+    top: calc(100% + 10px);
+  }
 }
